fix spacing issue with button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,10 @@ main {
     margin-left: 1.5rem;
   }
 
+  .toolbar__right {
+    margin-right: 1.5rem;
+  }
+
   .button {
     margin: 0;
   }
